# RFtools

./: CMakeLists.txt  README.md  createIFfromDB.py  propertiesTemplate.xml
src/: CMakeLists.txt  arraylist.h  calibration.h  classstats.cpp  classstats.h  colorgenerator.cpp  colorgenerator.h  configuration.cpp  configuration.h  copyfile.cpp  copyfile.h  depthdb.cpp  depthdb.h  depthfeature.cpp  depthfeature.h  depthimagedb.cpp  depthimagedb.h  featureGenerator.cpp  feature_gen.cpp  featureaccomulator.cpp  featureaccomulator.h  featurepool.cpp  featurepool.h  forestfeaturereader.cpp  forestfeaturereader.h  imagecache.cpp  imagecache.h  imagepixelstats.cpp  imagepixelstats.h  inmemdb.h  localcache.cpp  localcache.h  main.cpp  main_cl.cpp  main_comb.cpp  main_h.cpp  main_hand.cpp  main_handcl.cpp  main_handtest.cpp  main_handtestcl.cpp  (+22 more)
src/classification/: classstats.cpp  classstats.h  cltrainingcontext.cpp  cltrainingcontext.h  depthdb.cpp  depthdb.h  imagepixelstats.cpp  imagepixelstats.h  inmemdb.cpp  testclassificationforest.cpp  testclassificationforest.h
src/hough/: .directory  depthdbwithvotes.cpp  depthdbwithvotes.h  generalvotesstats.cpp  generalvotesstats.h  houghtrainingcontext.cpp  houghtrainingcontext.h  houghvotesstats.cpp  houghvotesstats.h  pooledhoughtrainingcontext.cpp  pooledhoughtrainingcontext.h  stubhoughtrainingcontext.cpp  stubhoughtrainingcontext.h  stubvotesstats.cpp  stubvotesstats.h  votesstats.cpp  votesstats.h  votesstatst.cpp  votesstatst.h
src/parallel/: paralleltreetrainer.cpp  paralleltreetrainer.h
src/perpixelclass/: perpixelclassificationdb.cpp  perpixelclassificationdb.h
src/regression/: aggregatedleafs.cpp  aggregatedleafs.h  depthdbreg.cpp  depthdbreg.h  regtrainingcontext.cpp  regtrainingcontext.h  votesaggregator.cpp  votesaggregator.h  votesstatst.cpp  votesstatst.h
src/seq/: forestmerger.cpp  forestmerger.h  forestmerger.h.autosave
